--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,34 +1,32 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "type": "shell",
-            "label": "g++.exe build active file",
-            "command": "C:\\Program Files (x86)\\Dev-Cpp\\MinGW64\\bin\\g++.exe",
-            "args": [
-                "-g",
-                "-std=c++11",
-                "${file}",
-                "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe",
-                "-lfreeglut",
-                "-lopengl32",
-                "-lglu32",
-                "-lglew32",
-                "-lfreeimage",
-                "-IC:\\freeglut\\include",
-                "-LC:\\freeglut\\lib"
-            ],
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
-        }
-    ]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "type": "shell",
+      "label": "g++.exe build active file",
+      "command": "C:\\Program Files (x86)\\Dev-Cpp\\MinGW64\\bin\\g++.exe",
+      "args": [
+        "-g",
+        "-std=c++11",
+        "${file}",
+        "-o",
+        "${fileDirname}\\${fileBasenameNoExtension}.exe",
+        "-lfreeglut",
+        "-lopengl32",
+        "-lglu32",
+        "-lglew32",
+        "-lfreeimage",
+        "-IC:\\freeglut\\include",
+        "-LC:\\freeglut\\lib"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "problemMatcher": ["$gcc"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    }
+  ]
 }
